--- a/css/sda_view.css
+++ b/css/sda_view.css
@@ -227,7 +227,7 @@
   height: auto;
 }
 
-.page_navigation, .sakagura_map_select {
+.product_sort_container, .sakagura_map_select {
   width: 100%;
   margin-top: 16px;
 }
