--- a/css/sake_library_search.css
+++ b/css/sake_library_search.css
@@ -508,7 +508,7 @@ body {
   border: 1px solid #ff0000;
 }
 
-.count_sort_container {
+.library_sort_container {
   color: #3f3f3f;
   width: 100%;
 }
