--- a/css/sake_view.css
+++ b/css/sake_view.css
@@ -274,7 +274,7 @@
   height: auto;
 }
 
-.top_note, .review_sort, .tasting_note, .photo_filter {
+.top_note, .review_sort_container, .tasting_note, .photo_filter {
   width: 100%;
   margin-top: 16px;
 }
