--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -22,28 +22,42 @@
 
 .sidebar-user {
   display: flex;
-  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
   color: #ffffff;
   text-decoration: none;
   width: 100%;
   height: auto;
-  padding: 20px 0;
+  padding: 20px 8px;
 }
 
 .user-img-container {
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 30px;
+  min-width: 30px;
+  max-width: 30px;
   height: 30px;
-  margin: 0 10px;
+  margin-right: 8px;
+  border-radius: 15px;
+  border: 1px solid #d2d2d2;
 }
 
 .user-img-container img {
-  width: 30px;
-  height: auto;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.sidebar-user span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  height: 30px;
 }
 
 .sidebar-item {
