--- a/css/mail_registry.css
+++ b/css/mail_registry.css
@@ -1,5 +1,4 @@
 body {
-  background: #e6e6e6;
   height: 100vh;
 }
 
@@ -34,7 +33,7 @@ body {
   line-height: 140%;
 }
 
-.logoheartgray14024 {
+.logoheart14024 {
   width: 140px;
   height: 24px;
   margin-top: 20px;
