--- a/css/mail_registry_complete.css
+++ b/css/mail_registry_complete.css
@@ -52,7 +52,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  line-height: 140%;
 }
 
 .column1 {
@@ -63,6 +62,7 @@
   align-items: center;
   color: #8BA340;
   font-size: 16px;
+  line-height: 140%;
 }
 
 .column2 {
@@ -71,7 +71,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  line-height: 140%;
   width: 100%;
 }
 
@@ -82,53 +81,14 @@
   justify-content: center;
   align-items: center;
   background: #C5CE51;
-  color: #ffffff;
+  color: #3f3f3f;
   font-size: 16px;
+  font-weight: bold;
   text-decoration: none;
   width: 240px;
   height: 40px;
   margin-top: 20px;
   border-radius: 4px;
-}
-
-.top_link_button {
-  background: #e6e6e6;
-  text-decoration: none;
-  height: 40px;
-  padding: 0 16px;
-  margin-top: 40px;
-  border-radius: 20px;
-  border: 1px solid #d2d2d2;
-}
-
-.top_link_button span {
-  position: relative;
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  color: #8c8c8c;
-  font-size: 16px;
-  width: 90px;
-  height: 40px;
-}
-
-.top_link_button span:after {
-  content:"\00a0";
-  display:block;
-  width: 4px;
-  height: 4px;
-  border: solid #b2b2b2;
-  border-width: 0 2px 2px 0;
-  position:absolute;
-  right: 0;
-  top: 46%;
-  margin-top: -2px;
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
 }
 
 /************************************************************/
