--- a/css/user_add_form.css
+++ b/css/user_add_form.css
@@ -1,4 +1,4 @@
-#registry_user_container {
+﻿#registry_user_container {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
@@ -155,6 +155,11 @@
   border: 1px solid #d2d2d2;
 }
 
+#email_verify {
+  color: #cd0000;
+  margin-top: 8px;
+}
+
 /************************************************************/
 .registry_user_button_container {
   display: flex;
@@ -202,7 +207,7 @@
 }
 
 #submit_button {
-  background: #C5CE51;
+  background: #e6e6e6;
   color: #000000;
   font-size: 15px;
   font-weight: bold;
@@ -211,6 +216,40 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+/* The message box is shown when the user clicks on the password field */
+#message {
+  position: relative;
+  margin-top: 8px;
+}
+
+#message p {
+  line-height: 140%;
+}
+
+#message p b {
+  margin-left: 2px;
+}
+
+/* Add a green text color and a checkmark when the requirements are right */
+.valid {
+  color: #C5CE51;
+}
+
+.valid:before {
+  position: relative;
+  content: "✔";
+}
+
+.invalid {
+  color: #8c8c8c;
+}
+
+.invalid:before {
+  position: relative;
+  color: #f5f5f5;
+  content: "✔";
 }
 
 @media only screen and (min-width: 560px) {
