--- a/css/sake_view.css
+++ b/css/sake_view.css
@@ -1307,6 +1307,39 @@
   margin-right: 4px;
 }
 
+.loader {
+  border: 2px solid #3498db;
+  border-radius: 50%;
+  border-top: 2px solid #ffffff;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 1s linear infinite; /* Safari */
+  animation: spin 1s linear infinite;
+}
+
+#inner_background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+/*background*******************/
+#search_background {
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: none;
+  position: fixed;
+  background-color: #ffffff;
+  color: #aaaaaa;
+  opacity: .9;
+  filter: alpha(opacity = 90);
+}
+
 /*ad*******************/
 #ad1, #ad2 {
   display: flex;
