--- a/css/user_login_form.css
+++ b/css/user_login_form.css
@@ -118,6 +118,11 @@ body {
   border: 1px solid #b2b2b2;
 }
 
+#message {
+  color: #cd0000;
+  margin-top: 8px;
+}
+
 /************************************************************/
 .registry_user_button_container {
   display: flex;
