パスワード検証を修正

--- a/css/user_view_config_password.css
+++ b/css/user_view_config_password.css
@@ -81,52 +81,6 @@
   margin-top: 8px;
 }
 
-/* The message box is shown when the user clicks on the password field */
-#message {
-  position: relative;
-  margin-top: 8px;
-}
-
-#message p {
-  line-height: 140%;
-}
-
-#message p b {
-  margin-left: 2px;
-}
-
-#password_check {
-  color: #cd0000;
-}
-
-/* Add a green text color and a checkmark when the requirements are right */
-.valid {
-  color: #C5CE51;
-}
-
-#password_check.valid {
-  color: #cd0000;
-}
-
-.valid:before {
-  position: relative;
-  content: "✔";
-}
-
-#password_check.valid:before {
-  content: "";
-}
-
-.invalid {
-  color: #8c8c8c;
-}
-
-.invalid:before {
-  position: relative;
-  color: #f5f5f5;
-  content: "✔";
-}
-
 .column1_container {
   display: flex;
   flex-wrap: wrap;
@@ -166,9 +120,58 @@
   border: 1px solid #b2b2b2;
 }
 
+/* The message box is shown when the user clicks on the password field */
 #password_verify {
-  color: #cd0000;
   margin-top: 8px;
+}
+
+#message {
+  position: relative;
+  margin-top: 8px;
+}
+
+#message p {
+  line-height: 140%;
+}
+
+#message p b {
+  margin-left: 2px;
+}
+
+/* Add a green text color and a checkmark when the requirements are right */
+.valid {
+  color: #C5CE51;
+}
+
+.valid:before {
+  position: relative;
+  content: "✔";
+}
+
+#password_verify.valid:before {
+  content: "";
+}
+
+#password_check.valid:before {
+  content: "";
+}
+
+.invalid {
+  color: #8c8c8c;
+}
+
+.invalid:before {
+  position: relative;
+  color: #f5f5f5;
+  content: "✔";
+}
+
+#password_verify.invalid:before {
+  content: "";
+}
+
+#password_check.invalid:before {
+  content: "";
 }
 
 .password_link {
