--- a/css/nonda.css
+++ b/css/nonda.css
@@ -347,6 +347,14 @@
   image-orientation: from-image;
 }
 
+.nonda_image_photo img.gray {
+	-webkit-filter: grayscale(100%);
+	-moz-filter: grayscale(100%);
+	-ms-filter: grayscale(100%);
+	-o-filter: grayscale(100%);
+	filter: grayscale(100%);
+}
+
 .remove_pic {
   position: absolute;
   top: 4px;
@@ -374,9 +382,33 @@
 #dialog_bbs .nonda_status_total_container {
   position: absolute;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  //justify-content: space-between;
   align-items: center;
-  width: 98%;
+  width: 100%;
+  height: 100%;
+}
+
+.nonda_loader {
+  border: 2px solid #3498db;
+  border-radius: 50%;
+  border-top: 2px solid #ffffff;
+  width: 40px;
+  height: 40px;
+  display:none;
+  -webkit-animation: spin 1s linear infinite; /* Safari */
+  animation: spin 1s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 #dialog_bbs .nonda_status {
@@ -412,6 +444,8 @@ input[name="nonda_image_caption"] {
 }
 
 .nonda_image_post_button_container .change_pic {
+  -webkit-appearance: none;
+  border-radius: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -764,6 +798,7 @@ input[name="nonda_image_caption"] {
   color: #3f3f3f;
   border: 1px solid #b2b2b2;
 }
+
 
 @media only screen and (min-width: 560px) {
   #dialog_bbs {
